--- a/style/style.css
+++ b/style/style.css
@@ -1,97 +1,205 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@600&display=swap');
+
+@font-face {
+    font-family: SFPRODISPLAYBOLD;
+    src: url('../SFPRODISPLAYBOLD.OTF') format(opentype);
+    font-weight: normal;
+    font-style: normal;
+}
 
 :root {
-    --fonte-padrao: 'Sora', sans-serif;
+    --fonte-padrao: 'SFPRODISPLAYBOLD', Arial; 
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: var(--fonte-padrao);
 }
 
 body {
-    font-family: var(--fonte-padrao), sans-serif;
-    background: url('../background.jpg') no-repeat center center fixed;
-    background-size: cover;
-    background-attachment: fixed;
     display: flex;
-    transition: background-position 0.1s ease; 
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
+    overflow: hidden;
+    background: url(../imgs/backgrounddd.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    animation: moveBackground 45s ease forwards;
 }
 
+.caixa {
+    width: 420px;
+    background-color: rgba(255, 255, 255, 0.123);
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(5px);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.205);
+}
 
-.login-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    height: 400px;
+.caixa img {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: auto;
     justify-content: center;
-}
-
-form {
-    height: 400px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.login-container h2 {
     text-align: center;
-    margin-bottom: 20px;
 }
 
-.login-container label {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
+.caixa .input-box {
+    position: relative;
     width: 100%;
-    text-align: left;
+    height: 50px;
+    margin: 30px 0;
 }
 
-.login-container input[type="text"],
-.login-container input[type="password"] {
+.input-box input {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 16px;
-    box-sizing: border-box;
-}
-
-.password-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.remember-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.remember-container label {
-    margin-left: 5px;
-}
-
-.login-container button {
-    width: 100%;
-    padding: 20px;
-    margin-top: 120px;
-    background-color: #700045;
-    color: white;
+    height: 100%;
+    background: transparent;
     border: none;
-    border-radius: 24px;
-    cursor: pointer;
-    text-align: center;
+    outline: none;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
 }
 
-.login-container button:hover {
-    background-color: #47001e;
+.input-box input::placeholder {
+    color: #fff;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+h1.titulo {
+    margin: auto; 
+    display: flex;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    justify-content: center;
+
+}
+
+.caixa .conectado-esqueceu {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+
+.conectado-esqueceu label input {
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.conectado-esqueceu a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.conectado-esqueceu a:hover {
+    transition: 50ms;
+    text-decoration: underline;
+}
+
+.caixa .btn {
+    width: 100%;
+    height: 45px;
+    background: #DB16A3;
+    color: white;
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.521);
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.caixa .problemas {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.problemas p a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.problemas a span {
+    color: white;
+}
+
+.problemas p a:hover{
+    transition: 50ms;
+    color: #41D2F2;
+    text-decoration: underline;
+}
+
+button.btn {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+button.btn:hover {
+    transition: 0.4s;
+    background-color: #d2a5ff;
+    scale: 105%;
+    color: white;
+}
+
+span {
+    color: #DB16A3;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    height: 11px;
+    width: 11px;
+    background-color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type="checkbox"]:hover {
+    background-color: #fff;
+}
+
+input[type="checkbox"]:after{
+    background-color: #41D2F2;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #41D2F2;
+    box-shadow: 0px 0px 10px #41D2F2;
+}
+
+input#mostrar-senha {
+    scale: 30%;
+    border-radius: 100%;
+    margin-left: -52px;
+    margin-top: 34px;
+}
+
+@keyframes moveBackground {
+    0% {
+        background-position: 0% 0%;
+    }
+    100% {
+        background-position: 100% 100%;
+    }
 }
