--- a/style/style.css
+++ b/style/style.css
@@ -25,175 +25,146 @@ body {
     min-height: 100vh;
     margin: 0;
     overflow: hidden;
-    background: url(../imgs/image-3.png) no-repeat;
+    background: url(../imgs/image.png) no-repeat;
     background-size: cover;
     background-position: center;
     animation: moveBackground 45s ease forwards;
 }
 
-.caixa {
-    width: 420px;
-    background-color: rgba(255, 255, 255, 0.123);
-    border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(5px);
-    color: #fff;
-    border-radius: 10px;
-    padding: 30px 40px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.205);
-}
-
-.caixa img {
+.form {
     display: flex;
-    margin: auto;
-    justify-content: center;
-    text-align: center;
-}
+    flex-direction: column;
+    gap: 10px;
+    background-color: #ffffff;
+    padding: 30px;
+    width: 450px;
+    border-radius: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+  }
+  
+  .form.visible {
+    opacity: 1; 
+  }
+  
+  
+  ::placeholder {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  .form button {
+    align-self: flex-end;
+  }
+  
+  .flex-column > label {
+    color: #151717;
+    font-weight: 600;
+  }
+  
+  .inputForm {
+    border: 1.5px solid #ecedec;
+    border-radius: 10px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    transition: 0.2s ease-in-out;
+  }
+  
+  .input {
+    margin-left: 10px;
+    border-radius: 10px;
+    border: none;
+    width: 85%;
+    height: 100%;
+  }
+  
+  .input:focus {
+    outline: none;
+  }
+  
+  .inputForm:focus-within {
+    border: 1.5px solid #8B23D5;
+  }
+  
+  .flex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-between;
+  }
+  
+  .flex-row > div > label {
+    font-size: 14px;
+    color: black;
+    font-weight: 400;
+  }
+  
+  .lutally {
+    padding-bottom: 10px;
+  }
 
-.caixa .input-box {
-    position: relative;
+  .span {
+    font-size: 14px;
+    margin-left: 5px;
+    color: #8B23D5;
+    font-weight: 500;
+    cursor: pointer;
+  }
+
+  span {
+    color: #8B23D5;
+  }
+  
+  .button-submit {
+    margin: 20px 0 10px 0;
+    background-color: #151717;
+    border: none;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 10px;
+    height: 50px;
+    width: 100%;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+  
+  .button-submit:hover {
+    background-color: #8B23D5;
+  }
+  
+  .p {
+    text-align: center;
+    color: black;
+    font-size: 14px;
+    margin: 5px 0;
+  }
+  
+  .btn {
+    margin-top: 10px;
     width: 100%;
     height: 50px;
-    margin: 30px 0;
-}
-
-.input-box input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 40px;
-    font-size: 16px;
-    color: #fff;
-    padding: 20px 45px 20px 20px;
-}
-
-.input-box input::placeholder {
-    color: #fff;
-}
-
-.input-box i {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-}
-
-h1.titulo {
-    margin: auto; 
+    border-radius: 10px;
     display: flex;
-    padding-top: 15px;
-    padding-bottom: 15px;
     justify-content: center;
-
-}
-
-.caixa .conectado-esqueceu {
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
-
-.conectado-esqueceu label input {
-    accent-color: #fff;
-    margin-right: 3px;
-}
-
-.conectado-esqueceu a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.conectado-esqueceu a:hover {
-    transition: 50ms;
-    text-decoration: underline;
-}
-
-.caixa .btn {
-    width: 100%;
-    height: 45px;
-    background: #DB16A3;
-    color: white;
-    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.521);
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.caixa .problemas {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-}
-
-.problemas p a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.problemas a span {
-    color: white;
-}
-
-.problemas p a:hover{
-    transition: 50ms;
-    color: #41D2F2;
-    text-decoration: underline;
-}
-
-button.btn {
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-button.btn:hover {
-    transition: 0.4s;
-    background-color: #d2a5ff;
-    scale: 105%;
-    color: white;
-}
-
-span {
-    color: #DB16A3;
-}
-
-input[type="checkbox"] {
-    appearance: none;
-    -webkit-appearance: none;
-    height: 11px;
-    width: 11px;
+    align-items: center;
+    font-weight: 500;
+    gap: 10px;
+    border: 1px solid #ededef;
     background-color: white;
-    border-radius: 5px;
     cursor: pointer;
-}
-
-input[type="checkbox"]:hover {
-    background-color: #fff;
-}
-
-input[type="checkbox"]:after{
-    background-color: #41D2F2;
-}
-
-input[type="checkbox"]:checked {
-    background-color: #41D2F2;
-    box-shadow: 0px 0px 10px #41D2F2;
-}
-
-input#mostrar-senha {
-    scale: 30%;
-    border-radius: 100%;
-    margin-left: -52px;
-    margin-top: 34px;
-}
+    transition: 0.2s ease-in-out;
+  }
+  
+  .btn:hover {
+    border: 1px solid #8B23D5;
+    ;
+  }
+  
+      
 
 @keyframes moveBackground {
     0% {
